<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="24dp"
        android:text="@string/titulo_principal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/etNombres"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="10dp"
        android:text="@string/strNombres"
        app:layout_constraintBottom_toBottomOf="@+id/etNombres"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvNombres"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:text="@string/strDireccion"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDireccion"
        app:layout_constraintEnd_toStartOf="@+id/etDireccion" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etNombres"
        app:layout_constraintTop_toBottomOf="@+id/etNombres" />

    <Button
        android:id="@+id/btEnviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/strBtnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDistrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/strDistrito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spDistrito" />

    <Spinner
        android:id="@+id/spDistrito"
        android:entries="@array/strDistritos"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/rgAuto"
        app:layout_constraintEnd_toEndOf="@+id/etNombres"
        app:layout_constraintStart_toStartOf="@+id/etNombres"
        app:layout_constraintTop_toTopOf="@+id/etDireccion" />

    <TextView
        android:id="@+id/tvAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:text="@string/strSelecAuto"
        app:layout_constraintEnd_toEndOf="@+id/tvDistrito"
        app:layout_constraintStart_toEndOf="@+id/tvDistrito"
        app:layout_constraintTop_toBottomOf="@+id/etDireccion" />

    <RadioGroup
        android:id="@+id/rgAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="@+id/spDistrito"
        app:layout_constraintTop_toTopOf="@+id/tvAuto">

        <RadioButton
            android:id="@+id/rbSubaru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAutoSubaru"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="370dp" />

        <RadioButton
            android:id="@+id/rbMazda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAutoMazda"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="306dp" />

        <RadioButton
            android:id="@+id/rbHonda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAutoHonda"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="338dp" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/chkDscto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/strDscto"
        app:layout_constraintBaseline_toBaselineOf="@+id/chkIgv"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/chkIgv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="17dp"
        android:text="@string/strIgv"
        app:layout_constraintStart_toEndOf="@+id/chkDscto"
        app:layout_constraintTop_toBottomOf="@+id/rgAuto" />

</android.support.constraint.ConstraintLayout>